--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
       <h1>Toto je navod ako napisat front end</h1>
 
       <nav>
-        <a href="#">Home</a> | <a href="#">Services</a> |
-        <a href="#">Contact</a> |
-        <a href="#">Privacy Policy</a>
+        <a href="./index.html">Home</a> |
+        <a
+          target="_blank"
+          href="https://www.linkedin.com/in/%C5%A1tefan-p%C3%B3csik-057226274/"
+          >LinkedIn</a
+        >
+        | <a target="_blank" href="https://github.com/steve25">GitHub</a> |
+        <a target="_blank" href="https://www.alza.sk/">Alza</a>
       </nav>
     </header>
 
